increase default width of the domain picker to stop it from jumping around so much. I didn't increase it by more because this would cause it to be repositioned so that it is no longer underneath the current domain name

--- a/client/landing/gutenboarding/components/domain-picker/style.scss
+++ b/client/landing/gutenboarding/components/domain-picker/style.scss
@@ -3,7 +3,7 @@
 @import 'assets/stylesheets/shared/animation'; // Needed for the placeholder
 
 .domain-picker {
-	min-width: 22em;
+	min-width: 24em;
 }
 
 .domain-picker__choose-domain-header {
